# Production-Grade-Agentic-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
frontend/: app.py  eval_app.py  utils.py
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/environments/: dev.tfvars
infrastructure/terraform/modules/artifact_registry/: main.tf
infrastructure/terraform/modules/cloud_run/: main.tf
infrastructure/terraform/modules/cloud_sql/: main.tf
infrastructure/terraform/modules/cloud_storage/: main.tf
infrastructure/terraform/modules/secrets/: main.tf
infrastructure/terraform/modules/vpc/: main.tf
scripts/: deploy.sh
src/: __init__.py
src/agent/: __init__.py  edges.py  graph.py  state.py
src/agent/nodes/: memory.py  planner.py  reranker.py  responder.py  retriever.py
src/agent/prompts/: system_prompts.py
src/api/: main.py
src/api/middleware/: auth.py  error_handler.py  logging_middleware.py  rate_limiter.py
src/api/routes/: health.py  ingest.py  query.py
src/api/schemas/: common.py
src/config/: __init__.py  constants.py  logging_config.py  settings.py
src/evaluation/: __init__.py  ragas_evaluator.py
src/evaluation/datasets/: __init__.py  golden_dataset.py
src/gateway/: __init__.py  cache.py  portkey_client.py
src/guardrails/: __init__.py  rails_manager.py
src/guardrails/config/: config.yml  prompts.yml  rails.co
src/guardrails/config/actions/: __init__.py  actions.py
src/ingestion/: __init__.py  pipeline.py
src/ingestion/loaders/: __init__.py  document_loader.py
src/ingestion/processors/: __init__.py  document_processor.py
src/memory/: __init__.py  models.py  postgres_memory.py
src/observability/: __init__.py  langsmith_tracer.py  metrics.py
src/retrieval/: chunking.py  embeddings.py  reranker.py  vectorstore.py
