[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-rag-platform"
version = "1.0.0"
description = "Production-grade enterprise Agentic RAG platform with LangGraph, FastAPI, Qdrant, and GCP deployment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Enterprise AI Team" },
]

dependencies = [
    # === Core Framework ===
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0,<1.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",

    # === LangChain & LangGraph ===
    "langchain>=0.3.0,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "langgraph>=0.2.0,<1.0.0",
    "langgraph-checkpoint-postgres>=2.0.0,<3.0.0",

    # === Vector Store & Embeddings ===
    "qdrant-client>=1.12.0,<2.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "fastembed>=0.4.0,<1.0.0",

    # === Reranking ===
    "flashrank>=0.2.0,<1.0.0",

    # === Database ===
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "psycopg[binary,pool]>=3.2.0,<4.0.0",
    "alembic>=1.14.0,<2.0.0",

    # === LLM Gateway ===
    "portkey-ai>=1.9.0,<2.0.0",

    # === Guardrails ===
    "nemoguardrails>=0.10.0,<1.0.0",

    # === Document Processing ===
    "pypdf>=5.0.0,<6.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "python-pptx>=1.0.0,<2.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=5.0.0,<6.0.0",
    "chardet>=5.2.0,<6.0.0",
    "unstructured>=0.15.0,<1.0.0",

    # === Google Cloud ===
    "google-cloud-storage>=2.18.0,<3.0.0",
    "google-cloud-documentai>=3.0.0,<4.0.0",
    "google-cloud-secret-manager>=2.21.0,<3.0.0",
    "google-auth>=2.35.0,<3.0.0",

    # === Observability ===
    "langsmith>=0.1.0,<1.0.0",
    "logfire[fastapi,sqlalchemy,httpx]>=2.0.0,<3.0.0",
    "prometheus-client>=0.21.0,<1.0.0",
    "opentelemetry-api>=1.27.0,<2.0.0",
    "opentelemetry-sdk>=1.27.0,<2.0.0",

    # === Evaluation ===
    "ragas>=0.2.0,<1.0.0",

    # === Utilities ===
    "tenacity>=9.0.0,<10.0.0",
    "structlog>=24.0.0,<25.0.0",
    "orjson>=3.10.0,<4.0.0",
    "python-dateutil>=2.9.0,<3.0.0",
    "aiofiles>=24.0.0,<25.0.0",
    "cachetools>=5.5.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "httpx>=0.27.0,<1.0.0",
    "ruff>=0.7.0,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "locust>=2.31.0,<3.0.0",
    "factory-boy>=3.3.0,<4.0.0",
    "faker>=30.0.0,<31.0.0",
]

frontend = [
    "streamlit>=1.39.0,<2.0.0",
    "plotly>=5.24.0,<6.0.0",
    "pandas>=2.2.0,<3.0.0",
    "altair>=5.4.0,<6.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
